erDiagram
    CHANNELS {
        // 構造省略
    }
    COSTS {
        // 構造省略
    }
    COUNTRIES {
        // 構造省略
    }
    CUSTOMERS {
        // 構造省略
    }
    PRODUCTS {
        // 構造省略
    }
    PROMOTIONS {
        // 構造省略
    }
    SALES {
        // 構造省略
    }
    SUPPLEMENTARY_DEMOGRAPHICS {
        // 構造省略
    }
    TIMES {
        // 構造省略
    }
    TIMES ||--o{ COSTS : "TIME_ID references TIME_ID"
    CHANNELS ||--o{ COSTS : "CHANNEL_ID references CHANNEL_ID"
    PRODUCTS ||--o{ COSTS : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ COSTS : "PROMO_ID references PROMO_ID"
    COUNTRIES ||--o{ CUSTOMERS : "COUNTRY_ID references COUNTRY_ID"
    PRODUCTS ||--o{ SALES : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ SALES : "PROMO_ID references PROMO_ID"
    TIMES ||--o{ SALES : "TIME_ID references TIME_ID"
    CHANNELS ||--o{ SALES : "CHANNEL_ID references CHANNEL_ID"
    CUSTOMERS ||--o{ SALES : "CUST_ID references CUST_ID"
